Add data analyzer endpoint